--- a/Desktop/gogfood2/src/index.css
+++ b/Desktop/gogfood2/src/index.css
@@ -24,7 +24,10 @@ main {
   display: grid;
   align-content: flex-start;
   /* gap: 20px; */
-  background-color: white;
+  background-color:  rgb(245, 243, 243);
+  max-width: 100vw;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
 .container {
@@ -35,5 +38,9 @@ main {
 
 .container .search-block {
   grid-column-end: span 4;
+}
+
+.container.bs {
+  display: block;
 }
 
