--- a/Desktop/gogfood2/src/pages/style.css
+++ b/Desktop/gogfood2/src/pages/style.css
@@ -48,7 +48,7 @@
 	width: 100%;
 	position: relative;
 	justify-content: center;
-	top: -50px;	
+	top: -50px;
 }
 
 .boxes {
@@ -64,10 +64,10 @@
 }
 
 .advertising img {
-	
+
 	margin-left: 50px;
 	border-radius: 15px;
-	}
+}
 
 .white__body {
 	background-color: white;
@@ -84,11 +84,16 @@
 }
 
 .img1 {
-	
+
 	background: url("https://img.freepik.com/free-psd/organic-pet-food-banner-template_23-2148457504.jpg") no-repeat;
 	height: 350px;
 	background-size: contain;
 	background-position: center;
+}
+
+.parent {
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 .description {
@@ -96,28 +101,122 @@
 }
 
 .minus {
+	height: 20px;
 	cursor: pointer;
-	width:15px;
-	float:left;
-	text-align:center;
-	
+	width: 15px;
+	float: left;
+	text-align: center;
+	vertical-align: middle;
+	margin-top: -0.01em;
+	margin-left: 7px;
 }
+
 .plus {
+	height: 20px;
 	cursor: pointer;
-	width:15px;
-	float:right;
-	text-align:center;
+	width: 15px;
+	float: right;
+	text-align: center;
+	vertical-align: middle;
+	margin-top: -0.01em;
 }
 
 .inp_price {
-	width:40px;
-	text-align:center;
-	border:none;
-	border-left:1px solid gray;
-	border-right:1px solid gray;
+	height: 20px;
+	width: 40px;
+	text-align: center;
+	border: none;
+	margin: 5px;
 }
 
 .count_box {
-	width:70px;
-	border:1px solid gray;  
+	display: grid;
+	grid-template-columns: 1fr 2fr 1fr;
+	place-content: center;
+	height: 40px;
+	width: 100px;
+	border: 1px solid gray;
+	border-radius: 30px;
+	font-size: large;
+}
+
+.basket__ball {
+	display: grid;
+	grid-template-columns: auto auto;
+	margin-bottom: 20px;
+}
+
+.basket {
+    border: none;
+    outline: none;
+    height: 40px;
+    background-color: rgb(239, 218, 28);
+    color: #222;
+    border-radius: 50px;
+    cursor: pointer;
+    width: 200px;
+    margin: auto;
+	font-size: 20px;
+}
+
+.basket:hover {
+    background-color: #777;
+}
+
+
+.part1 {
+	display: grid;
+	grid-template-columns: auto auto;
+	width: max-content;
+}
+
+.part2 {
+	width: max-content;
+}
+
+.part3 {
+	color: rgb(241, 76, 16);
+	float: left;
+	
+}
+
+.areas {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+}
+
+.area__img {
+	max-height: 500px;
+}
+
+.area__price {
+	display: grid;
+	grid-template-rows: auto auto auto auto auto;
+}
+
+.price__area {
+	font-size: 30px;
+	
+}
+
+mark {
+	background-color: rgb(245, 243, 243) !important;
+	color: rgb(241, 76, 16);
+}
+
+.promo1 {
+	display: grid;
+	grid-template-columns: auto auto;
+	background-color: #fff;
+	border-radius: 20px;
+	margin: 10px;
+}
+
+.pic {
+	font-size: xx-large;
+	padding: 20px;
+}
+
+.promo__text {
+	padding: 20px;
 }
